Fixed Google Maps and Mapbox geocoding services to fetch correct display name.