@@ -21,30 +21,30 @@ import java.util.List;
 @ApplicationScoped
 @Slf4j
 public class MapboxResponseAdapter implements GeocodingResponseAdapter<MapboxResponse> {
-    
+
     private static final String PROVIDER_NAME = "Mapbox";
 
     @Inject
     CountryMapper countryMapper;
-    
+
     @Override
     public FormattableGeocodingResult adapt(MapboxResponse mapboxResponse, Point requestCoordinates, String providerName) {
         log.debug("Adapting Mapbox response for coordinates: lon={}, lat={}",
-                 requestCoordinates.getX(), requestCoordinates.getY());
+                requestCoordinates.getX(), requestCoordinates.getY());
 
         if (mapboxResponse == null || mapboxResponse.getFeatures() == null || mapboxResponse.getFeatures().isEmpty()) {
             log.warn("Empty or null Mapbox response for coordinates: lon={}, lat={}",
                     requestCoordinates.getX(), requestCoordinates.getY());
             throw new GeocodingException("Mapbox returned empty or null response");
         }
-        
+
         // Use the first feature (most relevant)
-        MapboxFeature firstFeature = mapboxResponse.getFeatures().get(0);
-        
+        MapboxFeature firstFeature = mapboxResponse.getFeatures().getFirst();
+
         SimpleFormattableResult.SimpleFormattableResultBuilder builder = SimpleFormattableResult.builder()
-            .requestCoordinates(requestCoordinates)
-            .providerName(providerName);
-        
+                .requestCoordinates(requestCoordinates)
+                .providerName(providerName);
+
         // Extract result coordinates
         if (firstFeature.getGeometry() != null && firstFeature.getGeometry().getCoordinates() != null) {
             List<Double> coords = firstFeature.getGeometry().getCoordinates();
@@ -55,75 +55,46 @@ public class MapboxResponseAdapter implements GeocodingResponseAdapter<MapboxRes
         } else {
             builder.resultCoordinates(requestCoordinates);
         }
-        
+
         // Extract bounding box
         if (firstFeature.getBbox() != null && firstFeature.getBbox().size() >= 4) {
             Polygon boundingBox = extractBoundingBox(firstFeature.getBbox());
             builder.boundingBox(boundingBox);
         }
-        
+
         // Format display name using Mapbox specific logic
-        String formattedDisplayName = formatMapboxDisplayName(firstFeature);
+        String formattedDisplayName = getDisplayName(firstFeature);
         builder.formattedDisplayName(formattedDisplayName);
-        
+
         // Extract city and country from context
         builder.city(extractCity(firstFeature));
         String country = extractCountry(firstFeature);
         String normalizedCountry = countryMapper.normalize(country);
         builder.country(normalizedCountry);
-        
+
         return builder.build();
     }
 
-    
+    private String getDisplayName(MapboxFeature firstFeature) {
+        MapboxProperties properties = firstFeature.getProperties();
+        if (properties.getNamePreffered() != null && !"".equals(properties.getNamePreffered())) {
+            return properties.getNamePreffered();
+        }
+        if (properties.getName() != null && !"".equals(properties.getName())) {
+            return properties.getName();
+        }
+        if (properties.getFullAddress() != null && !"".equals(properties.getFullAddress())) {
+            return properties.getFullAddress();
+        }
+        return "Unknown location";
+    }
+
+
     @Override
     public String getProviderName() {
         return PROVIDER_NAME;
     }
-    
-    /**
-     * Format display name for Mapbox results.
-     * Uses the text field as name and extracts street address if available.
-     */
-    private String formatMapboxDisplayName(MapboxFeature feature) {
-        String name = feature.getText();
-        String streetAddress = extractStreetAddress(feature);
-        
-        if (name != null && !name.isBlank()) {
-            if (streetAddress != null && !streetAddress.isBlank() && !name.equals(streetAddress)) {
-                return String.format("%s (%s)", name, streetAddress);
-            } else {
-                return name;
-            }
-        } else {
-            // Fallback to place_name
-            return feature.getPlaceName() != null ? 
-                   feature.getPlaceName() : 
-                   "Unknown location";
-        }
-    }
-    
-    /**
-     * Extract street address from Mapbox feature.
-     */
-    private String extractStreetAddress(MapboxFeature feature) {
-        // Try to get from properties first
-        if (feature.getProperties() != null && feature.getProperties().getAddress() != null) {
-            return feature.getProperties().getAddress();
-        }
-        
-        // Extract from context if it's an address type
-        if (feature.getContext() != null) {
-            return feature.getContext().stream()
-                .filter(c -> c.getId() != null && c.getId().startsWith("address"))
-                .map(MapboxContext::getText)
-                .findFirst()
-                .orElse(null);
-        }
-        
-        return null;
-    }
-    
+
     /**
      * Extract city name from Mapbox context.
      */
@@ -131,17 +102,17 @@ public class MapboxResponseAdapter implements GeocodingResponseAdapter<MapboxRes
         if (feature.getContext() == null) {
             return null;
         }
-        
+
         return feature.getContext().stream()
-            .filter(c -> c.getId() != null && 
-                    (c.getId().startsWith("place.") || 
-                     c.getId().startsWith("locality.") ||
-                     c.getId().startsWith("district.")))
-            .map(MapboxContext::getText)
-            .findFirst()
-            .orElse(null);
+                .filter(c -> c.getId() != null &&
+                        (c.getId().startsWith("place.") ||
+                                c.getId().startsWith("locality.") ||
+                                c.getId().startsWith("district.")))
+                .map(MapboxContext::getText)
+                .findFirst()
+                .orElse(null);
     }
-    
+
     /**
      * Extract country name from Mapbox context.
      */
@@ -149,14 +120,14 @@ public class MapboxResponseAdapter implements GeocodingResponseAdapter<MapboxRes
         if (feature.getContext() == null) {
             return null;
         }
-        
+
         return feature.getContext().stream()
-            .filter(c -> c.getId() != null && c.getId().startsWith("country."))
-            .map(MapboxContext::getText)
-            .findFirst()
-            .orElse(null);
+                .filter(c -> c.getId() != null && c.getId().startsWith("country."))
+                .map(MapboxContext::getText)
+                .findFirst()
+                .orElse(null);
     }
-    
+
     /**
      * Extract bounding box from Mapbox bbox array.
      */
@@ -164,19 +135,19 @@ public class MapboxResponseAdapter implements GeocodingResponseAdapter<MapboxRes
         if (bbox.size() < 4) {
             return null;
         }
-        
+
         try {
             // Mapbox bbox format: [minLng, minLat, maxLng, maxLat]
             double minLng = bbox.get(0);
             double minLat = bbox.get(1);
             double maxLng = bbox.get(2);
             double maxLat = bbox.get(3);
-            
+
             return GeoUtils.buildBoundingBoxPolygon(minLat, maxLat, minLng, maxLng);
         } catch (Exception e) {
             log.warn("Failed to create bounding box from Mapbox bbox: {}", bbox, e);
             return null;
         }
     }
-    
+
 }
